# poc_rust_docker

./: readme.md
.devcontainer/: devcontainer.json
1_minimum_setting/dockerfiles/: server.dockerfile
2_reduce_production_image/: docker-compose.yml
2_reduce_production_image/dockerfiles/: server.dockerfile
3_verify_dev_image/: docker-compose.override.yml  docker-compose.production.yml
3_verify_dev_image/.devcontainer/: devcontainer.json  server.dockerfile
3_verify_dev_image/server/src/: main.rs
4_verify_hot_reload/: docker-compose.override.yml  docker-compose.production.yml
4_verify_hot_reload/server/: Cargo.toml
4_verify_hot_reload/server/src/: main.rs
5_verify_sql/: docker-compose.override.yml  docker-compose.production.yml
5_verify_sql/dockerfiles/: server.dockerfile
5_verify_sql/server/: Cargo.toml
5_verify_sql/server/migrations/2023-10-31-000234_create_users/: up.sql
5_verify_sql/server/migrations/20231027165400_create_posts/: up.sql
6_devcontainer_setting/: docker-compose.override.yml
6_devcontainer_setting/.devcontainer/: devcontainer.json
6_devcontainer_setting/dockerfiles/: server.dockerfile
7_develop_api_server/: docker-compose.override.yml
7_develop_api_server/.devcontainer/: devcontainer.json  docker-compose.yml
7_develop_api_server/dockerfiles/: server.dockerfile
7_develop_api_server/server/: .env  Cargo.toml
7_develop_api_server/server/.http/: database_test.http  health_check.http
7_develop_api_server/server/migrations/: 20231107061048_init.up.sql
7_develop_api_server/server/src/: handler.rs  main.rs  route.rs
